# JunRAG

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
scripts/: run_pipeline.py
scripts/webui/: README.md  app.py  start_server.sh
src/junrag/: __init__.py  config.py  models.py
src/junrag/cli/: __init__.py  pipeline.py
src/junrag/components/: __init__.py  decomposition.py  embedding.py  generation.py  reranking.py  retrieval.py  sequential_decomposition.py
src/junrag/pipelines/: __init__.py  base.py  full.py  naive.py  parallel.py  sequential_decomposition.py  webui.py
tools/: evaluate.py  prepare_all.py  prepare_vectordb.py  run_evaluation_sweep.sh
tools/dataset/: download_dataset.py
tools/embedding/: embed_contextual.py  embed_late.py
tools/preprocessing/: fetch_wikipedia.py
tools/qdrant/: upload_to_qdrant.py
